--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Aditya Kumar Singh",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "prettier": "^2.7.1"
   }
 }
