--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.7.1"
   }
 }
